samples/_failures_safe/1761393554_617580_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ffca7b7.c: In function ‘main’:
./samples/SAFE/__tmp_6ffca7b7.c:155:13: error: expected expression at end of input
  155 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_6ffca7b7.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ffca7b7.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ffca7b7.c:155:13: error: expected declaration or statement at end of input
